--- a/index.html
+++ b/index.html
@@ -26,13 +26,20 @@
 
     <!-- デバイスの選択 -->
     <form name="modeEdit">
+        <p>お使いのデバイスは何ですか？</p>
         <select name="device">
             <option value="iPhone11Pro">iPhone 11 Pro</option>
             <option value="iPadPro11inch">iPad Pro 11インチ</option>
         </select>
+        <p>アバターの透過画像の直リンク</p>
+        <input type="text" id="avatorImgURL"><br>
+        <img src="" alt="アバターの画像のURLを入力すると表示されます" id="avatorImg">
+        <p>着せ替え画面のスクショの直リンク</p>
+        <input type="text" id="screenshotImgURL"><br>      
+        <img src="" alt="スクショの画像のURLを入力すると表示されます" id="screenshotImg">
     </form>
     <p>選択したデバイス <span id="span1"></span></p>
-    <input type="button" value="端末の設定" onclick="decideMode()"/>
+    <input type="button" value="この設定で作成" onclick="decide()"/>
     <script src="js/img_edit.js"></script>
     <script src="js/img_size.js"></script>
 </body>
