--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <select name="device">
             <option value="iPhone11Pro" selected>iPhone 11 Pro</option>
             <option value="iPhone8">iPhone 8</option>
+            <option value="iPhoneXR">iPhone XR</option>
             <option value="iPadPro11inch">iPad Pro 11インチ</option>
         </select>
         <p>コーデにいくつのアイテムを使用しましたか？</p>
