--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <option value="iPhoneXR">iPhone XR</option>
             <option value="iPhoneXSMax">iPhone XS Max</option>
             <option value="iPadPro11inch">iPad Pro 11インチ</option>
+            <option value="ARROWSF-52A">ARROWS F-52A</option>
         </select>
         <p>コーデにいくつのアイテムを使用しましたか？</p>
         <select name="itemNum">
