--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <div class="upload">着せ替えのスクショ画像→ <input type="file" name="screenshot" id="screenshot" onchange="showScreenshotImg(this.files)"></div>
     <div class="upload">アバターの透過画像→ <input type="file" name="avator" id="avator" onchange="showAvatorImg(this.files)"></div>
     <!-- カラーピッカー -->
-    <input class="picker" type="text">
-    <span id="disp"></span>
+    <!-- <input class="picker" type="text">
+    <span id="disp"></span> -->
     <form action="">
         <input type="button" value="画像に変換" onclick="chgImg()">
     </form>
@@ -67,6 +67,6 @@
     <!-- <canvas id="canvas" style="background-color:yellow;"></canvas> -->
     <canvas id="canvas"></canvas>
     <!-- JS読み込み -->
-    <script src="js/img_size.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
