--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website">
     <meta property="og:description" content="ピグパーティのコーデ加工を自動化したツールです。">
     <meta property="og:url" content="https://wasabipigg.github.io/outfitImgAutomation/" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/wasabiPigg/5th/master/img/OGP_new.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/wasabiPigg/outfitImgAutomation/master/img/OGP.png">
     <meta property="og:site_name" content="ピグパーティコーデ加工ツール">
     <meta property="og:locale" content="ja_JP" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -55,7 +55,7 @@
     <p>選択したデバイス: <span id="span1"></span></p>
     <p>コーデに使用した個数: <span id="span2"></span></p>
     <!-- カラーピッカー -->
-    <p>背景色(PCのみ):<input class="picker" type="text"> </p>
+    <!-- <p>背景色(PCのみ):<input class="picker" type="text"> </p> -->
     <div id="color"></div> 
     <!-- 画像の加工プレビュー -->
     <div class="upload">アバターの透過画像→ <input type="file" name="avator" id="avator" onchange="showAvatorImg(this.files)"></div>
