余白いじった

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
             </div>
             <div class="text-center">
-                <p id="imgStatus">↓ここにプレビューが表示されます</p>
+                <label id="imgStatus">↓ここにプレビューが表示されます</label>
                 <img id="previewArea" class="rounded mx-auto d-blockd" src="http://via.placeholder.com/900x900">
                 <div><canvas id="canvas" class="rounded" style="display: none;"></canvas></div>
                 <div><img id="result" class="rounded" style="display: none;"></div>
