--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h3>コーデを加工するよ！</h3>
         <hr>
         <form name="modeEdit">
-            <div class="item">
+            <!-- <div class="item">
             <label for="custom-select-1b">デバイスの種類</label>
             <select id="custom-select-1b" class="custom-select" name="device" onchange="decide();">
                 <option value="iPhone8">iPhone 8</option>
@@ -54,7 +54,7 @@
                 <option value="ARROWSF-52A">ARROWS F-52A</option>
                 <option value="vivo1935">vivo 1935</option>
             </select>
-            </div>
+            </div> -->
 
             <div class="item">
             <label for="custom-select-1b">コーデに使用したアイテムの数</label>
