--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
         </form>
         <button class="btn btn-primary" id="chgImgBtn" onclick="chgImg()" style="display: none;">
-            画像に変換！
+            画像に変換
         </button>
     </section>
     <!-- JS読み込み -->
