--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
     <!-- デバイスの選択 -->
     <section class="toolForm">
-        <h3>コーデを加工するよ！</h3>
+        <h3>コーデを加工するよ</h3>
         <hr>
         <form name="modeEdit">
             <!-- <div class="item">
@@ -96,7 +96,7 @@
             </div>
         </form>
         <button class="btn btn-primary" id="chgImgBtn" onclick="chgImg()" style="display: none;">
-            画像に変換
+            画像に変換！
         </button>
     </section>
     <!-- JS読み込み -->
