--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h3>コーデを加工するよ!(調整中)</h3>
         <hr>
         <form name="modeEdit">
-            <label for="" id="height"></label>
+            <label for="" id="modeName"></label>
             <!-- <div class="item">
             <label for="custom-select-1b">デバイスの種類</label>
             <select id="custom-select-1b" class="custom-select" name="device" onchange="decide();">
