コーデに使った数を自動取得

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@wasabiPigg" />
     <meta name="twitter:description" content="ピグパーティのコーデ加工を自動でするツールです" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <!-- <link rel="icon" href="img/favicon.ico"> -->
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,7 +58,7 @@
             </select>
             </div> -->
 
-            <div class="item">
+            <!-- <div class="item">
             <label for="custom-select-1b">コーデに使用したアイテムの数</label>
             <select id="custom-select-1b" class="custom-select" name="itemNum" onchange="decide();">
                 <option value="1">1こ</option>
@@ -71,7 +72,7 @@
                 <option value="9">9こ</option>
                 <option value="10" selected>10こ</option>
             </select>
-            </div>
+            </div> -->
 
             <!-- 画像の設定と読み込み -->
             <div class="item">
