--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
     <!-- デバイスの選択 -->
     <section class="toolForm">
-        <h3>コーデを加工するよ!(調整中)</h3>
+        <h3>コーデを加工するよ!</h3>
         <hr>
         <form name="modeEdit">
             <label for="" id="modeName"></label>
