--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <section class="toolForm">
         <h3>コーデを加工するよ!</h3>
         <hr>
+        <p id="news" style="display: none;"></p>
         <form name="modeEdit">
             <label for="" id="modeName"></label>
             <!-- <div class="item">
