--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <!-- <link rel="icon" href="img/favicon.ico"> -->
     <link rel="stylesheet" href="css/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>ピグパーティコーデ加工ツール</title>
     <link href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500&display=swap" rel="stylesheet">
@@ -43,6 +43,7 @@
     <section class="toolForm">
         <h3>コーデを加工するよ!</h3>
         <hr>
+        <p id="bug" style="display: none;"></p>
         <p id="news" style="display: none;"></p>
         <form name="modeEdit">
             <label for="" id="modeName"></label>
@@ -94,6 +95,7 @@
                 <label id="imgStatus">↓ここにプレビューが表示されます</label>
                 <img id="previewArea" class="rounded mx-auto d-blockd" src="http://via.placeholder.com/900x900">
                 <div><canvas id="canvas" class="rounded" style="display: none;"></canvas></div>
+                <div><canvas id="canvas_hidden" class="rounded" style="display: none;"></canvas></div>
                 <div><img id="result" class="rounded" style="display: none;"></div>
                 <span id="saveHint"></span>
             </div>
