任意の背景画像に対応!

--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
                 <label class="custom-file-label" for="custom-file-1">着用画面のスクショ</label>
             </div>
             </div>
+            <div class="item">
+                <div class="custom-file">
+                    <input type="file" class="custom-file-input" id="custom-file-1" name="backgroundImg" id="backgroundImg"
+                        onchange="showBackgroundImg(this.files);">
+                    <label class="custom-file-label" for="custom-file-1">背景画像<span class="hosoku">(なくてもOK/正方形のみ)</span></label>
+                </div>
+                </div>
             <div class="text-center">
                 <label id="imgStatus">↓ここにプレビューが表示されます</label>
                 <img id="previewArea" class="rounded mx-auto d-blockd" src="http://via.placeholder.com/900x900">
