--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                 <div><canvas id="canvas" class="rounded" style="display: none;"></canvas></div>
                 <div><canvas id="canvas_hidden" class="rounded" style="display: none;"></canvas></div>
                 <div><canvas id="canvas_hidden2" class="rounded" style="display: none;"></canvas></div>
+                <div><canvas id="canvas_silhouette" class="rounded" style="display: none;"></canvas></div>
                 <div><img id="result" class="rounded" style="display: none;"></div>
                 <span id="saveHint"></span>
             </div>
