--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
         </button>
         <div id="logArea" style="display: none;">
             以下の情報を<a href="https://twitter.com/wasabipigg">わさび</a>にご共有ください<br>
+            表示エリアサイズ：横=<span id="logTanmatsuW"></span> 縦=<span id="logTanmatsuH"></span><br>
             推定端末：<span id="logTanmatsu"></span><br>
             アバの画像サイズ：横=<span id="logAvaW"></span> 縦=<span id="logAvaH"></span><br>
             スクショの画像サイズ：横=<span id="logScreenshotW"></span> 縦=<span id="logScreenshotH"></span><br>
