ログの表示する要素を増やした

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
             スクショの画像サイズ：横=<span id="logScreenshotW"></span> 縦=<span id="logScreenshotH"></span><br>
             取得した背景色：<span id="logColors"></span><br>
             使用アイテム数：<span id="logItemNum"></span><br>
+            使用アイテム枠(30,30)の色：<span id="logItemBoxColor"></span><br>
             背景画像の有無：<span id="logBackgroundImg"></span>
         </div>
     </section>
