--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:locale" content="ja_JP" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@wasabiPigg" />
-    <meta name="twitter:description" content="ピグパーティのコーデ加工を自動でするツールです" />
+    <meta name="twitter:description" content="ピグパーティのコーデ加工を自動でするツールです。" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <!-- <link rel="icon" href="img/favicon.ico"> -->
     <link rel="stylesheet" href="css/style.css">
