とりあえず上げておく

--- a/opencv.html
+++ b/opencv.html
@@ -17,7 +17,7 @@
   </div>
   <br>
   <form name="test">
-    <input type="button" value="grayscale" onClick="grayscale()">
+    <input type="button" value="2値化する" onClick="threshold()">
     <br>
   </form>
   <br>
