42にこめの四角をみてる

--- a/opencv.html
+++ b/opencv.html
@@ -23,14 +23,14 @@
   </form>
   <br>
   <div class="inputoutput">
-    <label>↓グレスケ後</label>
-    <canvas id="canvasOutputGrayScale" ></canvas>
-    <label>↓2値化（色反転）</label>
-    <canvas id="canvasOutputThreshold" ></canvas>
-    <label>↓輪郭にドット打つ</label>
-    <canvas id="canvasOutputFindContours" ></canvas>
-    <label>↓最終的な出力</label>
-    <canvas id="canvasOutput" ></canvas>
+    <label>↓グレスケ後</label><br>
+    <canvas id="canvasOutputGrayScale" ></canvas><br>
+    <label>↓2値化（色反転）</label><br>
+    <canvas id="canvasOutputThreshold" ></canvas><br>
+    <label>↓輪郭にドット打つ</label><br>
+    <canvas id="canvasOutputFindContours" ></canvas><br>
+    <label>↓最終的な出力</label><br>
+    <canvas id="canvasOutput" ></canvas><br>
     <div class="caption">canvasOutput</div>
   </div>
 </div>
