アイテム切り抜きページの作成

--- a/opencv.html
+++ b/opencv.html
@@ -32,6 +32,10 @@
     <label>↓最終的な出力</label><br>
     <canvas id="canvasOutput" ></canvas><br>
     <div class="caption">canvasOutput</div>
+    <label>↓アイテム整列</label><br>
+    <canvas id="canvasOutputItemList" ></canvas><br>
+    <div class="caption">canvasOutput</div>
+    <div><img id="result" class="rounded"></div>
   </div>
 </div>
 
