--- a/itemList.html
+++ b/itemList.html
@@ -49,9 +49,9 @@
     <section class="toolForm">
         <h4 class="text-center">アイテム切り抜きツール</h4>
         <hr>
-        <p class="text-center">着せ替え画面のスクショから、アイテムを所持数を隠して<br>整列させた透過画像を作ることができるツールです。</p>
+        <p class="text-center">着せ替え画面のスクショから、アイテム欄の所持数を隠して<br>整列させた透過画像を作ることができるツールです。</p>
         <p id="bug" style="display: none;"></p>
-        <p id="news" style="display: none;"></p>
+        <p id="news">- 縦に並べる際の並び順を変更しました。<br>- 所持数隠しを調整しました。（2023/09/04）</p>
         <form name="modeEdit">
             <label for="" id="modeName"></label>
             <!-- 画像の設定と読み込み -->
@@ -73,7 +73,6 @@
                 <img id="itemHc" class="rounded"></div>
                 <div><img id="itemVs" class="rounded">
                 <img id="itemVc" class="rounded"></div>
-                <span id="saveHint"></span>
             </div>
         </form>
     </section>
